# PyBacktestLab

./: Cargo.toml  README.md  pyproject.toml
examples/: prices_fetch.py  requirements.txt  signals_evaluate.py  signals_generate.py
examples/modules/: backtest_lab.py  database.py
src/: algorithms.rs  lib.rs
src/evaluation/: backtest_conditions.rs  backtest_result.rs  backtesting_signals.rs  mod.rs  position.rs  signal.rs
src/prices/: mod.rs  price.rs  price_manager.rs  price_ohlc.rs  price_tick.rs
src/strategies/: mod.rs  strategy.rs
src/strategies/entry/: bollinger.rs  entry.rs  immediate.rs  mod.rs  volatility_mean.rs  volatility_pullback.rs
src/strategies/exit/: bollinger.rs  exit.rs  fixed_tp.rs  mod.rs  trailing_stop.rs
src/strategies/filter/: filter.rs  mod.rs  no_filter.rs
