[package]
name = "PyBacktestLab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_backtest_lab"
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.38"
dict_derive = "0.5.0"
once_cell = "1.19.0"
pyo3 = "0.20.0"
rayon = "1.10.0"
